Modified Rules page to use clash.tools instead of clashcaller

--- a/rules.html
+++ b/rules.html
@@ -47,7 +47,7 @@
 			<li>No homophobic, racist, or otherwise derogatory language.</li>
     		<li>We don't do donation ratios, so use your cc troops and request as much as possible.</li>
     		<li>Only donate requested troops. Please don't donate if you have less than level 5 archers.</li>
-    		<li>We use clashcaller.com to call bases for war. If you take someone else's target we will be very unhappy. Always check before you attack.</li>
+    		<li>We use clash.tools to call bases for war. If you take someone else's target we will be very unhappy. Always check before you attack.</li>
     		<li>ALWAYS use both attacks.</li>
     		<li>No troll bases. Seriously don't do it.</li>
     		<li>If you're TH9 and TH8, always go for three stars. If you think you can't 3 star, then attack a lower base that you can 3 star.</li>
@@ -57,14 +57,21 @@
     		<li>We use GroupMe chats as well so it's strongly recommended that you make an account there.</li>
 		</ul>
 
-		<h2>Using Clashcaller</h2>
-		<ol>
-            <li><a href="http://clashcaller.com" target="_blank">Go to Clashcaller.com</a></li>
-            <li>Click the JOIN WAR button</li>
-            <li>Input the code that we send out in clanmail before war starts</li>
-            <li>Click on the + button next to a base you can 3 star (if you're not a TH10)</li>
-            <li>Don't double stack clashcaller calls. If someone called it and didn't attack it yet, don't add a call behind him. This only adds to delay.</li>
-        </ol>
+        <h2>Using clash.tools</h2>
+            <h3>Getting Started</h3>
+                <ol>
+                    <li><a href="http://clash.tools" target="_blank">Go to clash.tools</a></li>
+                    <li>Login or create an account if you don't already have one</li>
+                    <li>Fill out your profile information</li>
+                    <li>Search "Dusk Dominion" to join our clan on clash.tools (#2YYVCU8C)</li>
+                </ol>
+            <h3>Calling Bases</h3>
+                <ol>
+                    <li>Click "Bases" during war</li>
+                    <li>Click on the crossed swords button next to the base you want to attack and confirm</li>
+                    <li>Click on the call to fill in the stars you got after you attack</li>
+<!--                     <li>Don't double stack clashcaller calls. If someone called it and didn't attack it yet, don't add a call behind him. This only adds to delay.</li> -->
+                </ol>
 
         <h2>Glossary of Terms</h2>
 
