Updated website for new join requirements and Warmatch.us

--- a/rules.html
+++ b/rules.html
@@ -5,13 +5,13 @@
 <head>
 		<title>Dusk Dominion - General Rules</title>
 		<link type="text/css" rel="stylesheet" href="dusk.css">
-		<link rel="icon" href="favicon.png" />  
+		<link rel="icon" href="favicon.png" />
 
         <meta name="keywords" content="dusk dominion, dusk dominion clan">
         <meta name="description" content="Welcome to Dusk Dominion (Clash of Clans), a Level 10 war clan with 180 wins.  We are recruiting TH9s and TH10s.">
         <meta name="author" content="Dusk Dominion">
 </head>
-	
+
 <body>
 
 	<div class="wrapper">
@@ -35,19 +35,19 @@
                 <ul>
                     <li><a href="stats.html">Stats</a></li>
                     <li><a href="tactics.html">Tactics</a></li>
-                    <li><a href="mentor.html">Mentor Program</a></li> 
+                    <li><a href="mentor.html">Mentor Program</a></li>
                 </ul>
             </li>
         </ul>
 	<br>
-	
+
 	<div class="body">
 		<h2>General Clan Rules</h2>
 		<ul>
 			<li>No homophobic, racist, or otherwise derogatory language.</li>
     		<li>We don't do donation ratios, so use your cc troops and request as much as possible.</li>
     		<li>Only donate requested troops. Please don't donate if you have less than level 5 archers.</li>
-    		<li>We use clash.tools to call bases for war. If you take someone else's target we will be very unhappy. Always check before you attack.</li>
+    		<li>We use Warmatch to call bases for war. If you take someone else's target we will be very unhappy. Always check before you attack.</li>
     		<li>ALWAYS use both attacks.</li>
     		<li>No troll bases. Seriously don't do it.</li>
     		<li>If you're TH9 and TH8, always go for three stars. If you think you can't 3 star, then attack a lower base that you can 3 star.</li>
@@ -57,19 +57,26 @@
     		<li>We use GroupMe chats as well so it's strongly recommended that you make an account there.</li>
 		</ul>
 
-        <h2>Using clash.tools</h2>
+        <h2>Using Warmatch</h2>
             <h3>Getting Started</h3>
                 <ol>
-                    <li><a href="http://clash.tools" target="_blank">Go to clash.tools</a></li>
+                    <li><a href="http://warmatch.us" target="_blank">Go to Warmatch.us</a></li>
                     <li>Login or create an account if you don't already have one</li>
                     <li>Fill out your profile information</li>
-                    <li>Search "Dusk Dominion" to join our clan on clash.tools (#2YYVCU8C)</li>
+                    <li>Search "Dusk Dominion" to join our  (#2YYVCU8C)</li>
                 </ol>
-            <h3>Calling Bases</h3>
+            <h3>Calling Bases through the Website</h3>
                 <ol>
-                    <li>Click "Bases" during war</li>
-                    <li>Click on the crossed swords button next to the base you want to attack and confirm</li>
-                    <li>Click on the call to fill in the stars you got after you attack</li>
+                    <li>Go to the dashboard</li>
+                    <li>Click on the current war</li>
+                    <li>Choose the enemy base to you want to call</li>
+<!--                     <li>Don't double stack clashcaller calls. If someone called it and didn't attack it yet, don't add a call behind him. This only adds to delay.</li> -->
+                </ol>
+            <h3>Using Warmatch through GroupMe</h3>
+                <ol>
+                    <li>Join our War Room Chat on GM</li>
+                    <li>Use "!wm" to start a command</li>
+                    <li>Call a base or log your attacks and defenses using the <a href="http://warmatch.us/wmbot" target="_blank">command list</a></li>
 <!--                     <li>Don't double stack clashcaller calls. If someone called it and didn't attack it yet, don't add a call behind him. This only adds to delay.</li> -->
                 </ol>
 
@@ -94,16 +101,16 @@
         </ul>
 	</div>
 
-	
+
 	<div class="push"></div>
 	</div>
-	
-	
+
+
 	<div class="footer">
 		Copyright &copy Dusk Dominion 2015. All rights reserved.
 		<br>This website was created by Jonathan Tong and funded by Tribs.
 	</div>
-	
+
 </body>
 
 </html>
