--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 		<meta name="description" content="Welcome to Dusk Dominion (Clash of Clans), a Level 10 war clan with 180 wins.  We are recruiting TH9s and TH10s.">
 		<meta name="author" content="Dusk Dominion">
 </head>
-	
+
 <body>
 
 	<div class="wrapper">
@@ -32,12 +32,12 @@
 				<ul>
 		            <li><a href="stats.html">Stats</a></li>
 		            <li><a href="tactics.html">Tactics</a></li>
-		            <li><a href="mentor.html">Mentor Program</a></li> 
+		            <li><a href="mentor.html">Mentor Program</a></li>
             	</ul>
 			</li>
 		</ul>
 	<br>
-	
+
 	<div class="body">
 		<h2>Our Mission</h2>
 
@@ -45,7 +45,7 @@
 
 		<h2>Our History</h2>
 
-		<p>Formerly known as Reddit Dusk, Dusk Dominon split from the Reddit Clan System about one year ago to become an independent clan. As our own clan, we've been able to grow and evolve into what we are today. We are a high level war clan that's always looking for new members. We currently Level 10, have over 180 war wins, and aim to do three star attacks whenever possible.</p>
+		<p>Formerly known as Reddit Dusk, Dusk Dominon split from the Reddit Clan System about one year ago to become an independent clan. As our own clan, we've been able to grow and evolve into what we are today. We are a high level war clan that's always looking for new members. We currently Level 10, have over 200 war wins, and aim for three star attacks whenever possible.</p>
 
 		<h2>Why Should I Join?</h2>
 
@@ -53,19 +53,19 @@
 			<li>To surround yourself with other clashers who are just as passionate about the game and are striving for excellence</li>
 			<li>To gain experience and improve your skill in clan wars</li>
 			<li>We are active in both donations and clan chat</li>
-		</ul> 
+		</ul>
 	</div>
 
-	
+
 	<div class="push"></div>
 	</div>
-	
-	
+
+
 	<div class="footer">
 		Copyright &copy Dusk Dominion 2015. All rights reserved.
 		<br>This website was created by Jonathan Tong and funded by Tribs.
 	</div>
-	
+
 </body>
 
 </html>
