Updated for Level 11 logo and 2016

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 		<link rel="icon" href="favicon.png" />
 
 		<meta name="keywords" content="dusk dominion, dusk dominion clan">
-		<meta name="description" content="Welcome to Dusk Dominion (Clash of Clans), a Level 10 war clan with 180 wins.  We are recruiting TH9s and TH10s.">
+		<meta name="description" content="Welcome to Dusk Dominion (Clash of Clans), a Level 11 war clan with 250 wins.  We are recruiting TH9s, TH10s, and TH11s.">
 		<meta name="author" content="Dusk Dominion">
 </head>
 
@@ -45,7 +45,7 @@
 
 		<h2>Our History</h2>
 
-		<p>Formerly known as Reddit Dusk, Dusk Dominon split from the Reddit Clan System about one year ago to become an independent clan. As our own clan, we've been able to grow and evolve into what we are today. We are a high level war clan that's always looking for new members. We currently Level 10, have over 200 war wins, and aim for three star attacks whenever possible.</p>
+		<p>Formerly known as Reddit Dusk, Dusk Dominon split from the Reddit Clan System about one year ago to become an independent clan. As our own clan, we've been able to grow and evolve into what we are today. We are a high level war clan that's always looking for new members. We currently Level 11, have 250 war wins, and aim for three star attacks whenever possible.</p>
 
 		<h2>Why Should I Join?</h2>
 
@@ -62,7 +62,7 @@
 
 
 	<div class="footer">
-		Copyright &copy Dusk Dominion 2015. All rights reserved.
+		Copyright &copy Dusk Dominion 2015-2016. All rights reserved.
 		<br>This website was created by Jonathan Tong and funded by Tribs.
 	</div>
 
