--- a/tactics.html
+++ b/tactics.html
@@ -8,7 +8,7 @@
 		<link rel="icon" href="favicon.png" />
 
 		<meta name="keywords" content="dusk dominion, dusk dominion clan">
-		<meta name="description" content="Welcome to Dusk Dominion (Clash of Clans), a Level 10 war clan with 180 wins.  We are recruiting TH9s and TH10s.">
+		<meta name="description" content="Welcome to Dusk Dominion (Clash of Clans), a Level 11 war clan with 250 wins.  We are recruiting TH9s, TH10s, and TH11s.">
 		<meta name="author" content="Dusk Dominion">
 </head>
 	
@@ -114,7 +114,7 @@
 	
 	
 	<div class="footer">
-		Copyright &copy Dusk Dominion 2015. All rights reserved.
+		Copyright &copy Dusk Dominion 2015-2016. All rights reserved.
 		<br>This website was created by Jonathan Tong and funded by Tribs.
 	</div>
 	
