--- a/warroom.html
+++ b/warroom.html
@@ -48,7 +48,7 @@
 	
 	
 	<div class="footer">
-		Copyright &copy Dusk Dominion 2015. All rights reserved.
+		Copyright &copy Dusk Dominion 2015-2016. All rights reserved.
 		<br>This website was created by Jonathan Tong and funded by Tribs.
 	</div>
 	
