--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<!-- <link rel="shortcut icon" type="image/ico" href="favicon.ico"/> -->
 <!-- 		<link rel="shortcut icon" type="image/png" href="http://duskdominion.us/favicon.png"/> -->
 		<meta name="keywords" content="dusk dominion, dusk dominion clan">
-		<meta name="description" content="Welcome to Dusk Dominion (Clash of Clans), a Level 10 war clan with 180 wins.  We are recruiting TH9s and TH10s.">
+		<meta name="description" content="Welcome to Dusk Dominion (Clash of Clans), a Level 11 war clan with 250 wins.  We are recruiting TH9s, TH10s, and TH11s.">
 		<meta name="author" content="Dusk Dominion">
 
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -73,7 +73,7 @@
 	
 	
 	<div class="footer">
-		Copyright &copy Dusk Dominion 2015. All rights reserved.
+		Copyright &copy Dusk Dominion 2015-2016. All rights reserved.
 		<br>This website was created by Jonathan Tong and funded by Tribs.
 	</div>
 	
